--- a/src/styles.css
+++ b/src/styles.css
@@ -110,6 +110,23 @@ body {
     border-top: 1px solid #e6e6e6;
 }
 
+.prioridades {
+    font-style: italic;
+    position: relative;
+    margin: 0;
+    width: 100%;
+    font-size: 16px;
+    font-family: inherit;
+    font-weight: inherit;
+    line-height: 1.4em;
+    color: inherit;
+    padding: 6px;
+    box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
+    box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
 .toggle-all {
     width: 1px;
     height: 1px;
@@ -323,6 +340,7 @@ html .clear-completed:active {
     line-height: 20px;
     text-decoration: none;
     cursor: pointer;
+    color: #5e7de3;
 }
 
 .clear-completed:hover {
