--- a/docs/main.css
+++ b/docs/main.css
@@ -20,31 +20,6 @@ button {
     -moz-osx-font-smoothing: grayscale;
 }
 
-.buttonP {
-    border: none;
-    color: white;
-    padding: 10px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 8px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 4px
-}
-
-.button1 {
-    background-color: green
-}
-
-.button2 {
-    background-color: blue
-}
-
-.button3 {
-    background-color: yellow
-}
-
 body {
     font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
     line-height: 1.4em;
@@ -133,6 +108,23 @@ body {
     position: relative;
     z-index: 2;
     border-top: 1px solid #e6e6e6;
+}
+
+.prioridades {
+    font-style: italic;
+    position: relative;
+    margin: 0;
+    width: 100%;
+    font-size: 16px;
+    font-family: inherit;
+    font-weight: inherit;
+    line-height: 1.4em;
+    color: inherit;
+    padding: 6px;
+    box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
+    box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .toggle-all {
@@ -348,6 +340,7 @@ html .clear-completed:active {
     line-height: 20px;
     text-decoration: none;
     cursor: pointer;
+    color: #5e7de3;
 }
 
 .clear-completed:hover {
@@ -399,6 +392,13 @@ html .clear-completed:active {
     .filters {
         bottom: 10px;
     }
+}
+
+.cuadrado {
+    width: 2%;
+    height: 0;
+    padding-top: 2%;
+    background: red;
 }
 
 hr {
